crates/core/src/html/snapshots/epub_tailor_core__html__tables__tests__headerless_row_snapshot.snap
---
source: crates/core/src/html/tables.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p class="et-table-row">a — b — c — d — e</p><p class="et-table-row">f — h — i — j</p></body></html>
