crates/core/src/html/snapshots/epub_tailor_core__html__tables__tests__nested_table_flattened_innermost_first_snapshot.snap
---
source: crates/core/src/html/tables.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p>Outer</p><p></p><p>inner</p></body></html>
