crates/core/src/html/snapshots/epub_tailor_core__html__tables__tests__simple_table_is_kept_for_the_native_grid_snapshot.snap
---
source: crates/core/src/html/tables.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><table><thead><tr><th>Item</th><th>Cost</th></tr></thead><tbody><tr><td>Pen</td><td>1</td></tr><tr><td>Ink</td><td>2</td></tr></tbody></table></body></html>
