crates/core/src/html/snapshots/epub_tailor_core__html__tables__tests__thead_table_snapshot.snap
---
source: crates/core/src/html/tables.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml"><head><title>T</title></head><body><p class="et-table-caption"><strong>Prices</strong></p><p class="et-table-cell"><strong>Item:</strong> Pen</p><p class="et-table-cell"><strong>Cost:</strong> 1</p><p class="et-table-row-sep">—</p><p class="et-table-cell"><strong>Item:</strong> Ink</p><p class="et-table-cell"><strong>Cost:</strong> 2</p></body></html>
